# Laboratorio-2-IA

./: BayesianNetwork.py  README.md  bayes.py  controlador.py  main.py  prueba.py  pyproject.toml  setup.py
.github/workflows/: python-app.yml  python-publish.yml
BayesianNetwork.egg-info/: PKG-INFO  SOURCES.txt
Librería/: RedBayes.py  __init__.py  bayes.py
RedBayes.egg-info/: PKG-INFO  SOURCES.txt
gbnnetwork.egg-info/: PKG-INFO  SOURCES.txt
jbnetwork.egg-info/: PKG-INFO  SOURCES.txt
